# perspective-corrected-analysis-gui

./: .gitignore  Design  README.md  clearConfig.py  config.yaml  data.xlsx  helper.yaml  pyproject.toml  template.yaml
behavior-analysis-tool/: model.py  widgets.py
behavior-analysis-tool/tabs/: load_project.py
behavior_analysis_tool/: analysis.py  model.py  template.yaml  utils.py  widgets.py
behavior_analysis_tool/tabs/: analysis.py  create_project.py  load_project.py  load_videos.py  registration.py
qerqw/qasdfasd/: config.yaml
ui_design/: __init__.py  __main__.py  analysis.py  model.py  stylesheet.css  template.yaml  widgets.py
ui_design.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ui_design/tabs/: analysis.py  create_project.py  load_project.py  load_videos.py  registration.py
